# storaged

./: .gitignore  AUTHORS  COPYING  HACKING  Makefile.am  NEWS  README  README.md  autogen.sh  configure.ac
data/: Makefile.am  com.redhat.lvm2.conf.in  com.redhat.lvm2.policy.in  com.redhat.lvm2.service.in  com.redhat.lvm2.xml  com.redhat.storaged.conf.in  com.redhat.storaged.service.in  storaged.service.in  udisks-lvm.service.in
doc/: Makefile.am
doc/man/: Makefile.am  storaged.xml  udisks-lvm.xml  udisksd-lvm.xml
po/: POTFILES.in
src/: Makefile.am  basejob.c  basejob.h  block.c  block.h  blockobject.c  blockobject.h  daemon.c  daemon.h  helper.c  invocation.c  invocation.h  job.c  job.h  logicalvolume.c  logicalvolume.h  logicalvolumeobject.c  logicalvolumeobject.h  main.c  manager.c  manager.h  physicalvolume.c  physicalvolume.h  spawnedjob.c  spawnedjob.h  threadedjob.c  threadedjob.h  types.h  util.c  util.h  volumegroup.c  volumegroup.h  volumegroupobject.c  volumegroupobject.h
src/tests/: Makefile.am  frob-helper.c  test-block.c  test-dynamic.c  test-info.c  test-jobs.c  test-lvm.c  test-methods.c  test-react.c  testing.c  testing.h
